--- a/style.css
+++ b/style.css
@@ -19,3 +19,6 @@
             display: inline-block;
             margin: 0 16px;
         }
+        body{
+            font-family:’Poppins’,sans-serif;
+            }
