--- a/style.css
+++ b/style.css
@@ -22,3 +22,17 @@
         body{
             font-family:’Poppins’,sans-serif;
             }
+            .estudante-imagem{
+                width: 120px;
+                }
+                .estudante-icone{
+                    width:24px;
+                    }
+                    .estudante-div {
+                        text-align: center;
+                        }
+
+                        .estudante-titulo{
+                            text-align: center;
+                            padding: 50px 0;
+                        }
