--- a/style.css
+++ b/style.css
@@ -11,28 +11,36 @@
     font-size: 24px;
     }
 
-    .cabecalho-imagem{
-        width: 20%;
-        }
+ .cabecalho-imagem{
+    width: 20%;
+    }
 
-        .cabecalho-lista-item{
-            display: inline-block;
-            margin: 0 16px;
-        }
-        body{
-            font-family:’Poppins’,sans-serif;
-            }
-            .estudante-imagem{
-                width: 120px;
-                }
-                .estudante-icone{
-                    width:24px;
-                    }
-                    .estudante-div {
-                        text-align: center;
-                        }
+.cabecalho-lista-item{
+    display: inline-block;
+    margin: 0 16px;
+    }
+    body{
+    font-family:’Poppins’,sans-serif;
+    }
 
-                        .estudante-titulo{
-                            text-align: center;
-                            padding: 50px 0;
-                        }
+.estudante-imagem{
+    width: 120px;
+    }
+
+.estudante-icone{
+    width:24px;
+    }
+
+.estudante-div {
+    text-align: center;
+    }
+
+.estudante-titulo{
+    text-align: center;
+    padding: 50px 0;
+    }
+
+.estudante-todos{
+    display: grid;
+    grid-template-columns: 20% 20% 20% 20% 20%;
+}
